Have a problem with the extension size that seems to be caused by not using the separate debug program. Will try to go back to using a separate file.

--- a/html/index.html
+++ b/html/index.html
@@ -134,7 +134,7 @@
                 <div id="versions" style="font-size: .7em;font-stretch: condensed;text-decoration-style: all;text-decoration-style: dashed;color-rendering: all;">
                 </div>
             </div>
-            <div id="folders">
+            <div id="folders" style="display: none;">
                 <div id="folderHeader">
                     <div>
                         <span id="Set" class="csButton greyButton">Set</span>
